@@ -1,3 +1,4 @@
+<<<<<<< HEAD
 -server
 -Xmx16G
 -XX:+UseG1GC
@@ -6,3 +7,14 @@
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
+=======
+-server
+-Xmx3G
+-XX:+UseG1GC
+-XX:G1HeapRegionSize=32M
+-XX:+UseGCOverheadLimit
+-XX:+ExplicitGCInvokesConcurrent
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:+ExitOnOutOfMemoryError
+-Djdk.attach.allowAttachSelf=true
+>>>>>>> 8524244ef8eb69afa91b144ba497a30327a9cc77
